# tauri-agent-fleet

./: .gitignore  AGENTS.md  README.md  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
dashboard/: index.html  novnc.d.ts  src.tsx  style.css
docs/: architecture.md  driver-contract.md  ducktape-migration.md  horizontal-scaling.md  implementation-plan.md  plugin-contract.md  runner-instructions.md  token-budget.md
docs/superpowers/specs/: 2026-07-16-agent-fleet-transition-design.md
src/: agent.ts  build.ts  cli.ts  command.ts  coordinator-server.ts  coordinator.ts  driver.ts  instance.ts  instruction.ts  network.ts  process.ts  provider.ts  revision.ts  runner.ts  scheduler.ts  schema.ts  server.ts  storage.ts  types.ts  worker.ts
src/drivers/: tauri.ts
test/: coordinator-server.test.ts  coordinator.test.ts  fleet.test.ts  horizontal-acceptance.test.ts  shared-cache.test.ts  worker.test.ts
test/fixtures/: vnc-stub.ts
test/fixtures/dual-runtime-app/: build.sh
test/fixtures/dual-runtime-app/.agent/: fleet.json
test/fixtures/dual-runtime-app/.agent/suites/: smoke.toon
test/fixtures/dual-runtime-app/.tauri-agent/: fleet.json
test/fixtures/dual-runtime-app/.tauri-agent/suites/: smoke.json  smoke.toon
test/fixtures/dual-runtime-app/src/: main.ts
test/fixtures/dual-runtime-app/src-tauri/: Cargo.toml  tauri.conf.json
test/fixtures/dual-runtime-app/src-tauri/capabilities/: default.json
test/fixtures/dual-runtime-app/src-tauri/src/: main.rs
